# stitching

./: CMakeLists.txt  text.cpp
config/: testconfig
src/: CAnonymSem.cpp  CAnonymSem.h  CConfig.cpp  CConfig.h  CEncoder.cpp  CEncoder.h  CEventObserver.cpp  CEventObserver.h  CException.cpp  CException.h  CImageTrans.cpp  CImageTrans.h  CLocalLog.cpp  CLocalLog.h  CLocalThreadLog.cpp  CLocalThreadLog.h  CLog.cpp  CLog.h  CMsgQueue.cpp  CMsgQueue.h  CMutex.cpp  CMutex.h  COutDataWkThread.cpp  COutDataWkThread.h  COutDataWkThreadPool.cpp  COutDataWkThreadPool.h  CReator.cpp  CReator.h  CSimpleConfig.cpp  CSimpleConfig.h  CThread.cpp  CThread.h  CThreadPool.cpp  CThreadPool.h  Message.h  main.cpp  main.sh  makefile
